# rs-lc3-vm

./: Cargo.toml  README.md
examples/: Echo
src/: command.rs  constants.rs  enums.rs  error.rs  lib.rs  main.rs  mem.rs  memory.rs  regs.rs  trap.rs  types.rs  vm.rs
